# SHD

./: CMakeLists.txt  Plot.py  README.md  main.cpp  plot.py
smhasher/src/: SpeedTest.cpp
